# frontend

./: .gitignore  docker-compose.yml  nginx.conf
faceModel/FaceModel/: Dockerfile  dev.Dockerfile  pyproject.toml
faceModel/FaceModel/faceModel/: main.py  main2.py
faceModel/FaceModel/faceModel/Data/: ds_model_sface_detector_opencv_aligned_normalization_base_expand_0.pkl
frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.jsx  main.jsx
frontend/src/Backstage/Common/: Common.style.js
frontend/src/Backstage/DashboardPage/: DashboardPage.jsx  DashboardPage.style.js
frontend/src/Backstage/LoginPage/: LoginPage.jsx  LoginPage.style.js
frontend/src/Backstage/ManagerRegisterPage/: ManagerRegisterPage.jsx  ManagerRegisterPage.style.js
frontend/src/Backstage/MemberPage/: MemberPage.jsx  MemberPage.style.js  MemberTable.jsx
frontend/src/Backstage/ProductPage/: ProductPage.jsx  ProductPage.style.js  ProductTable.jsx  ShowModal.jsx
frontend/src/Backstage/RecordPage/: AddRecord.jsx  AddRecordDetailTable.jsx  RecordDetail.jsx  RecordPage.jsx  RecordPage.style.js  RecordTable.jsx
frontend/src/Forestage/Cart/: Cart.jsx  Cart.style.js  CartItem.jsx  CartItem.style.js
frontend/src/Forestage/CheckoutPage/: CheckoutPage.jsx  CheckoutPage.style.js
frontend/src/Forestage/PayMethodPage/: PayMethodPage.jsx  PayMethodPage.style.js  SuccessCreditPage.jsx  SuccessLinePay.style.js  SuccessLinePayPage.jsx
frontend/src/HomePage/: HomePage.jsx  HomePage.style.js
frontend/src/store/: reducer.js
(+27 files in other folders)
