[tool.poetry]
name = "facemodel"
version = "0.1.0"
description = ""
authors = ["Lu-weiting <runeeld23@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
fastapi = "^0.115.6"
uvicorn = "^0.22.0"
opencv-python-headless = "^4.8.0"
torch = ">=2.2.0,<=2.3.0"
torchvision = ">=0.17.0,<=0.18.0"
facenet-pytorch = { git = "https://github.com/timesler/facenet-pytorch.git", rev = "master" }
httpx = "^0.24.1"
pillow = "^10.0.0"
numpy = "1.26.0"
python-multipart = "^0.0.19"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
